# swagger/v1/swagger.yaml
@@ -4,23 +4,15 @@ info:
   title: Lorier API V1
   version: v1
 paths:
-  "/consignees/{id}":
+  "/consignees":
     get:
-      summary: Get a consignee
+      summary: Get all consignees
       tags:
       - Consignees
-      parameters:
-      - name: consginee_id
-        in: path
-        required: true
       responses:
         '200':
           description: OK
           content: {}
-        '404':
-          description: Resource not found
-          content: {}
-  "/consignees":
     post:
       summary: Store a new consignee
       tags:
@@ -58,6 +50,22 @@ paths:
               - province_id
               - city_id
               - district_id
+  "/consignees/{id}":
+    get:
+      summary: Get a consignee
+      tags:
+      - Consignees
+      parameters:
+      - name: consginee_id
+        in: path
+        required: true
+      responses:
+        '200':
+          description: OK
+          content: {}
+        '404':
+          description: Resource not found
+          content: {}
   "/stations":
     get:
       summary: Get all stations
